src/components/Shoutout/Shoutout.css
.commentIcon {
  height: 30px;
  position: absolute;
  top: 30px;
  right: 30px;
}

.commentIconOpen {
  transform: rotate(180deg);
  transition: 1.2s;
}

.commentIconClosed {
  /*
  transform: rotate(0deg);
  transition: 1s;
  */
  transform: rotate(-360deg);
  transition: 1.2s;
}

button, .emoji, .commentIcon {
  cursor: pointer;
}

.shoutoutOuterContainer {
  margin: 30px 100px -85px
}

.shoutoutContainer {
  min-height: 150px;
  position: relative;
  display: flex;
  flex-direction: column;
  z-index: 1;
  height: 100%;
}

.flattenedBottomCorners {
  border-radius: 25px 25px 0 0;
  transition: .7s;
}

.curvedBottomCorners {
  border-radius: 25px;
  transition: .7s;
}

.emoji {
  font-size: 25px;
}

.emoji.disabled {
  cursor: default;
}

.emojiContainer {
  margin-right: 20px;
}

.emojiRow {
  display: flex;
}

.author {
  text-align: right;
}

h3 {
  margin-block-start: 0;
  margin-block-end: 0;
}

.comment {
  margin-bottom: 32px;
}

.commentContainer {
  border-radius: 0px 0px 25px 25px;
  z-index: -1;
}

.commentContainerClosed {
  transform: translateY(-100%);
  transition: .7s ease-in-out;
}

.commentContainerOpen {
  transform: translateY(0%);
  transition: .7s ease-in-out;
  margin-bottom: 120px;
}

.shoutoutContainerPadding {
  padding: 25px 40px;
}

.replyInputContainer {
  width: 100%;
}

.largeBottomMargin {
  margin-bottom: 400px;
}

